Target slot indicator added. Small style fix
Target slot indicator with corresponding player color. Fix for cut off circles/slots in FireFox. Bug remains in Chrome.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -161,7 +161,7 @@ main {
 
 
 .board {
-  border: 2vh solid rgba(30, 100, 240, 1);
+  border: 1.25vh solid rgba(30, 100, 240, 1);
   border-radius: 5%;
   box-shadow: 10px 7px 15px grey;
 
@@ -193,12 +193,24 @@ main {
   box-shadow: inset 45px 45px 10px -50px rgba(0, 0, 0, 0.18);
 }
 
-.nextred {
-  background-color: rgb(255, 170, 170);
+.coll.nextred {
+   background-image: linear-gradient(
+    to bottom right,
+    rgb(255, 170, 170),
+    rgb(255, 170, 170),
+    rgb(255, 170, 170)
+    
+  );
 }
 
-.nextyellow {
-  background-color: rgb(255, 255, 170);
+.coll.nextyellow {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(255, 255, 170),
+    rgb(255, 255, 170),
+    rgb(255, 255, 170)
+    
+  );
 }
 
 .coll.red {
